# SDMatte

./: .gitignore  .gitmodules  infer_folder.py  infer_single.py  pyproject.toml
configs/: SDMatte.py
data/: __init__.py  dataset.py
scripts/: folder.bat  init.bat  single.bat
